# spark-gap

./: Cargo.toml  README.md  rustfmt.toml  tasks.md
examples/: gltf_example.rs  winit_window.rs
examples/animation/: anim_render.rs  animation_shader.wgsl  animation_shader_2.wgsl  main.rs  model_handler.rs  model_render_old.rs  render.rs  run_loop.rs  world.rs
examples/draw_cube/: bindings.rs  camera.rs  context.rs  cube.rs  main.rs  model.rs  render.rs  shader.wgsl  texture.rs
examples/draw_cube_2/: cube.rs  main.rs  model.rs  render.rs  shader.wgsl  texture.rs
examples/draw_triangle/: context.rs  draw.rs  frame_counter.rs  main.rs
examples/shadows/: cube.rs  debug_depth_shader.wgsl  debug_shader.wgsl  debug_shadow.rs  entities.rs  entity.rs  event_loop.rs  forward_pass.rs  light.rs  lights.rs  main.rs  model.rs  render.rs  render_passes.rs  run.rs  shader.wgsl  shadow_pass.rs  world.rs
src/: animator.rs  buffers.rs  camera.rs  camera_handler.rs  context.rs  error.rs  frame_counter.rs  gpu_context.rs  hash_any.rs  hash_map.rs  input.rs  lib.rs  material.rs  math.rs  model.rs  model_animation.rs  model_builder.rs  model_mesh.rs  node_animation.rs  small_mesh.rs  texture.rs  texture_config.rs  transform.rs  utils.rs
src/camera/: camera.rs  camera_handler.rs  fly_camera_controller.rs  mod.rs  orbit_camera.rs
