[package]
name = "spark-gap"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.79"
env_logger = "0.11.0"
glam = { version = "0.25.0", features = ["bytemuck"] }
gltf = "1.4.0"
image = { version = "0.24.8", default-features = false, features = [
    "png",
    "jpeg",
    "bmp",
    "tga",
    "hdr",
] }
parking_lot = "0.12.1"
russimp = { path = "../russimp_glam" }
wgpu = "0.19.1"
winit = "0.29.10"
log = "0.4.20"
web-time = "1.0.0"
bytemuck = { version = "1.14.3", features = [ "derive" ] }
ahash = "0.8.7"
hashbrown = "0.14.3"
rand = "0.8.5"

[dev-dependencies]
pollster = "0.3.0"

[[example]]
name = "gltf_example"
path = "examples/gltf_example.rs"

[[example]]
name = "winit_window"
path = "examples/winit_window.rs"

[[example]]
name = "draw_triangle"
path = "examples/draw_triangle/main.rs"

[[example]]
name = "draw_cube"
path = "examples/draw_cube/main.rs"

[[example]]
name = "animation"
path = "examples/animation/main.rs"
